--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,16 @@
 {
-    "extends": "next/core-web-vitals",
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 2020,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {
-      "react/no-unescaped-entities": "off",
-      "@next/next/no-img-element": "off",
-      "react/display-name": "off"
-    },
-    "ignorePatterns": ["node_modules/**", ".next/**", "out/**"]
+  "extends": ["next/core-web-vitals"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-img-element": "off",
+    "react/display-name": "off"
   }
+}
